<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.twooldguys.homestay.SearchActivity">

    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:panelHeight="48dp"
        sothree:shadowHeight="4dp"
        sothree:dragView="@+id/preferenceSlider">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.MapFragment"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/preferenceSlider"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/prefs"
                android:gravity="center_vertical" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/smoking" />
                    <RadioGroup
                        android:id="@+id/pref_smoking_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/pref_smoking_dont_care"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/dont_care" />
                        <RadioButton
                            android:id="@+id/pref_smoking_smoking"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/smoking" />
                        <RadioButton
                            android:id="@+id/pref_smoking_non_smoking"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/non_smoking" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/pets" />
                    <RadioGroup
                        android:id="@+id/pref_pets_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/pref_pets_no_pets"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/no_pets" />
                        <RadioButton
                            android:id="@+id/pref_pets_cats"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/cats" />
                        <RadioButton
                            android:id="@+id/pref_pets_dogs"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/dogs" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/family" />
                    <RadioGroup
                        android:id="@+id/pref_family_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/pref_family_2_parents"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/two_parents" />
                        <RadioButton
                            android:id="@+id/pref_family_mom"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/mom" />
                        <RadioButton
                            android:id="@+id/pref_family_dad"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/dad" />
                        <RadioButton
                            android:id="@+id/pref_family_1_child"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/one_kid" />
                        <RadioButton
                            android:id="@+id/pref_family_2_children"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/two_kids" />
                        <RadioButton
                            android:id="@+id/pref_family_other"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/other_family" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
</RelativeLayout>
